--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/fabric": "^5.3.10",
     "@types/jspdf": "^1.3.3",
     "autoprefixer": "^10.4.23",
+    "axios": "^1.13.3",
     "clsx": "^2.1.1",
     "fabric": "^5.5.2",
     "firebase": "^12.6.0",
